--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for obj  do |f| %>
+<%= form_for @user do |f| %>
   <%= f.label :username %>
   <%= f.text_field :username %>
   <br/>
@@ -11,6 +11,5 @@
   <%= f.label :phone_number %>
   <%= f.text_field :phone_number %>
   <br/>
-  <%= f.submit obj.new_record? ? 'Create User' : 'Update' %>
+  <%= f.submit @user.new_record? ? 'Create User' : 'Update' %>
 <% end %>
-
