Use symbol instead of string for equality comparison.

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,6 +1,6 @@
 <% if !flash.keys.empty? %>
   <% flash.each do |key, msg| %>
-    <div class='alert alert-<%= key == 'notice' ? 'success' : 'danger' %>' >
+    <div class='alert alert-<%= key == :notice ? 'success' : 'danger' %>' >
       <%= msg %>
     </div>
   <% end %>
