--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,10 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
-    
+    <% if logged_in? %>
+      Hi <%= current_user.username %>
+      <%= link_to 'Logout', logout_path %>
+    <% else %>
+      <%= link_to 'Login', login_path %>
+    <% end %>
   </div>
 </div>
