--- a/app/views/phrases/_form.html.erb
+++ b/app/views/phrases/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @phrase do |f| %>
   <%= f.label :body %>
-  <%= f.text_field %>
+  <%= f.text_field :body %>
   <br/>
   <%= f.submit 'Create Phrase' %>
 <% end %>
