Render shared errors template if there are any errors.

--- a/app/views/phrases/new.html.erb
+++ b/app/views/phrases/new.html.erb
@@ -1,5 +1,6 @@
 <%= render 'shared/header', title: 'Create a New Phrase' %>
 
+<%= render 'shared/errors', obj: @phrase %>
 <%= render 'form' %>
 
 <br/>
