Only show relevant fields to branches.

--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -1,10 +1,11 @@
 <%= form_tag '/alerts' do %>
-  <%= label_tag :phrase %>
-  <select name='phrase_id'>
-    <% @phrases.each do |phrase| %>
-      <option value=<%= phrase.id %>><%= phrase.body %></option>
-    <% end %>
-  </select>
-  <br/>
-  <%= submit_tag 'Send Alert' %>
+  <div class="form-group">
+    <%= label_tag :phrase, nil, class: 'sr-only' %>
+    <select name='phrase_id', class="form-control">
+      <% @phrases.each do |phrase| %>
+        <option value=<%= phrase.id %>><%= phrase.body %></option>
+      <% end %>
+    </select>
+  </div>
+  <%= submit_tag 'Send Alert', class: 'btn btn-block btn-success' %>
 <% end %>
