Add table class and table-striped class to table element.

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/header', title: 'Previous Alerts' %>
 
-<table>
+<table class="table table-striped">
   <th>Phrase Sent</th>
   <th>Date and Time Sent</th>
   <% @alerts.each do |alert| %>
