Change header title and wrap in bootstrap columns.

--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,3 +1,5 @@
-<%= render 'shared/header', title: 'Create a new task' %>
+<div class="col-md-6 col-md-offset-3 form-container">
+  <%= render 'shared/header', title: 'Send SMS Alert' %>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
