--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,13 +1,43 @@
 <div class="navbar navbar-default">
-  <div class="container-fluid">
-    <% if logged_in? %>
-      Hi <%= current_user.username %>
-      <%= link_to 'Add Phrase', new_phrase_path %>
-      <%= link_to 'Send Alert', new_alert_path %>
-      <%= link_to 'View Alert History', alerts_path %>
-      <%= link_to 'Logout', logout_path %>
-    <% else %>
-      <%= link_to 'Login', login_path %>
-    <% end %>
+  <div class="container">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse_navbar">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      </button>
+      <%= link_to 'Buzzworks SMS Alerts', user_path(current_user), class: 'navbar-brand' %>
+    </div>
+    
+    <div class="collapse navbar-collapse" id="collapse_navbar">
+      <ul class="nav navbar-nav navbar-left">
+      <% if logged_in? %>
+        <% if current_user.admin? %>
+          <li><%= link_to 'Add Phrase', new_phrase_path %></li>
+          <li><%= link_to 'Send Alert', new_alert_path %></li>
+          <li><%= link_to 'View Alert History', alerts_path %></li>
+        <% end %>
+      <% else %>
+      <% end %>
+      </ul>
+      
+      <% if logged_in? %>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Logout', logout_path %></li>
+              <li><%= link_to 'Edit Account Details', edit_user_path(current_user) %></li>
+            </ul>
+          </li>
+        </ul>
+      <% else %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to 'Login', login_path %></li>
+        </ul>
+      <% end %>
+    </div>
   </div>
 </div>
