--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,21 @@
-<%= form_for @user do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %>
-  <br/>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <br/>
-  <%= f.label :role %>
-  <%= f.text_field :role %>
-  <br/>
-  <%= f.label :phone_number %>
-  <%= f.text_field :phone_number %>
-  <br/>
-  <%= f.submit @user.new_record? ? 'Create User' : 'Update' %>
+<%= form_for @user, html: { role: 'form' }  do |f| %>
+  <div class="form-group">
+    <%= f.label :username, class: 'sr-only' %>
+    <%= f.text_field :username, placeholder: 'Enter a username', class: 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= f.label :phone_number, class: 'sr-only' %>
+    <%= f.text_field :phone_number, placeholder: 'Enter a phone number (replace 0 at start with 44)', class: 'form-control' %>
+  </div>
+  <% if @user.new_record? || (logged_in? && current_user.admin?) %>
+    <div class="form-group">
+      <%= f.label :password, class: 'sr-only' %>
+      <%= f.password_field :password, placeholder: 'Enter a password', class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :role, class: 'sr-only' %>
+      <%= f.text_field :role, placeholder: 'Enter a role', class: 'form-control' %>
+    </div>
+  <% end %>
+  <%= f.submit @user.new_record? ? 'Create User' : 'Update', class: 'btn btn-block btn-success' %>
 <% end %>
