Use friendly_datetime helper to format created_at.

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -6,7 +6,7 @@
   <% @alerts.each do |alert| %>
     <tr>
       <td><%= alert.phrase %></td>
-      <td><%= alert.created_at %></td>
+      <td><%= friendly_datetime(alert.created_at) %></td>
     </tr>
   <% end %>
 </table>  
