--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="form-group">
     <%= f.label :phone_number, class: 'sr-only' %>
-    <%= f.text_field :phone_number, placeholder: 'Enter a phone number (replace 0 at start with 44)', class: 'form-control' %>
+    <%= f.text_field :phone_number, placeholder: 'Enter a phone number', class: 'form-control' %>
   </div>
   <% if @user.new_record? || (logged_in? && current_user.admin?) %>
     <div class="form-group">
