--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
 <%= render 'shared/header', title: "#{current_user.username.capitalize} Details" %>
 
+<%= render 'shared/errors', obj: @user %>
 <%= render 'form' %>
